force-app/main/default/objects/Account/fields/Account_Age__c.field-meta.xml
<CustomField>
    <fullName>Account_Age__c</fullName>
    <formula>IF(ISNULL(CreatedDate), &apos;Unknown&apos;, IF(DATEVALUE(CreatedDate) &gt;= ADDMONTHS(TODAY(),-6),&apos;&lt;6 Months&apos;, IF(DATEVALUE(CreatedDate) &gt;= ADDMONTHS(TODAY(),-12),&apos;6 Months - 1 Year&apos;, IF(DATEVALUE(CreatedDate) &gt;= ADDMONTHS(TODAY(),-60),&apos;1-5 Years&apos;,IF(DATEVALUE(CreatedDate) &gt;= ADDMONTHS(TODAY(),-120),&apos;5-10 Years&apos;, &apos;10 + Years&apos;)))))</formula>
    <label>Account Age</label>
    <type>Text</type>
</CustomField>