force-app/main/default/objects/Account/fields/IT_Budget__c.field-meta.xml
<CustomField>
    <fullName>IT_Budget__c</fullName>
    <label>IT Budget</label>
    <length>255</length>
    <type>Text</type>
</CustomField>