force-app/main/default/objects/Account/fields/Number_of_Locations_ZoomInfo__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations_ZoomInfo__c</fullName>
    <label>Number of Locations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>